# NotepadX

./: .gitignore  Cargo.toml  README.md  build.rs  bundle.sh  migrate_mouse.py  migrate_renderer.py  package_deb.sh  remove_dead.py
.github/workflows/: apt-repo.yml  ci.yml  release.yml
assets/: logo.icns
debian/: changelog  control  debhelper-build-stamp  files  notepadx.1  notepadx.install  notepadx.substvars  rules  watch
debian/cargo_home/: .global-cache
debian/cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: ashpd-0.11.1.crate  async-process-2.5.0.crate  async-signal-0.2.13.crate  atk-0.18.2.crate  atk-sys-0.18.2.crate  cairo-rs-0.18.5.crate  cairo-sys-rs-0.18.2.crate  cosmic-text-0.12.1.crate  env_filter-1.0.0.crate  env_logger-0.11.9.crate  etagere-0.2.15.crate  field-offset-0.3.6.crate  font-types-0.7.3.crate  fontconfig-parser-0.5.8.crate  fontdb-0.16.2.crate  gdk-0.18.2.crate  gdk-pixbuf-0.18.5.crate  gdk-pixbuf-sys-0.18.0.crate  gdk-sys-0.18.2.crate  gio-0.18.4.crate  gio-sys-0.18.1.crate  glib-0.18.5.crate  glib-macros-0.18.5.crate  glib-sys-0.18.1.crate  glow-0.14.2.crate  glyphon-0.7.0.crate  gobject-sys-0.18.0.crate  gtk-0.18.2.crate  gtk-sys-0.18.2.crate  gtk3-macros-0.18.2.crate  jiff-0.2.23.crate  libxdo-0.6.0.crate  libxdo-sys-0.11.0.crate  muda-0.15.3.crate  naga-23.1.0.crate  pango-0.18.3.crate  pango-sys-0.18.0.crate  proc-macro-crate-1.3.1.crate  proc-macro-crate-2.0.2.crate  rangemap-1.7.1.crate  (+55 more)
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/ashpd-0.11.1/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/glow-0.14.2/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/glyphon-0.7.0/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/muda-0.15.3/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/naga-23.1.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/rangemap-1.7.1/: .gitignore
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/rfd-0.15.4/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/ropey-1.6.1/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/str_indices-0.4.4/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/swash-0.1.19/: .gitignore
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-bash-0.23.3/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-c-0.24.1/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-cpp-0.23.4/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-css-0.23.2/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-go-0.25.0/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-highlight-0.25.10/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-html-0.23.2/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-java-0.23.5/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-javascript-0.23.1/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-json-0.24.8/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-lua-0.5.0/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-md-0.5.3/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-php-0.24.2/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-python-0.23.6/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-ruby-0.23.1/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-rust-0.24.0/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-toml-ng-0.7.0/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-typescript-0.23.2/: .cargo_vcs_info.json  Cargo.toml
debian/cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/tree-sitter-xml-0.7.0/: .cargo_vcs_info.json  Cargo.toml
debian/notepadx/DEBIAN/: control  md5sums
debian/notepadx/usr/share/applications/: notepadx.desktop
debian/source/: options
docs/ux/: menu-palette-search-audit.md  statusbar-interactions-flow.md  ui-audit.md  ui-polish-flow.md
src/: large_file.rs  lib.rs  main.rs  menu.rs  session.rs  settings.rs
src/editor/: buffer.rs  buffer_tests.rs  mod.rs
src/overlay/: find.rs  goto.rs  mod.rs  palette.rs  results_panel.rs  tests.rs
src/renderer/: mod.rs  shape.wgsl
src/settings/: tests.rs
src/syntax/: mod.rs
src/theme/: mod.rs
tests/: integration_tests.rs
tests/showcase/: 00_quick_smoke.txt  01_multicursor_targets.txt  02_find_replace_regex.txt  03_navigation_long_file.md  04_rust_symbols.rs  05_json_payload.json  06_project_config.toml  07_script_sample.py  09_line_endings_crlf.txt  11_large_lines.txt  README.md
(+461 files in other folders)
