[package]
name = "notepadx"
version = "0.1.0"
edition = "2021"
description = "A fast, beautiful, cross-platform text editor"
license = "MIT"

[dependencies]
# Windowing
winit = "0.30"

# GPU rendering
wgpu = "23"

# Text shaping & layout
glyphon = "0.7"

# Text buffer
ropey = "1.6"

# Async runtime (for wgpu)
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Clipboard
arboard = "3"

# File dialog
rfd = "0.15"

# Encoding detection
encoding_rs = "0.8"

# Serialization (for config files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PNG decoding for app icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Vertex data
bytemuck = { version = "1.19", features = ["derive"] }

# Native menus (macOS menu bar support)
muda = "0.15"

# Syntax highlighting (tree-sitter)
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-xml = "0.7"

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "NotepadX"
identifier = "com.notepadx.app"
icon = ["assets/logo.icns"]
category = "public.app-category.developer-tools"
short_description = "A fast, beautiful, cross-platform text editor"
copyright = "2025 NotepadX"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
