[package]
name = "notepadx"
version = "1.0.6"
edition = "2021"
description = "A fast, beautiful, cross-platform text editor"
license = "MIT"

[features]
default = ["lang-js", "lang-python", "lang-json"]
full-syntax = ["lang-js", "lang-ts", "lang-python", "lang-json", "lang-html", "lang-css", "lang-toml", "lang-bash", "lang-yaml", "lang-xml"]
lang-js = ["dep:tree-sitter-javascript"]
lang-ts = ["dep:tree-sitter-typescript"]
lang-python = ["dep:tree-sitter-python"]
lang-json = ["dep:tree-sitter-json"]
lang-html = ["dep:tree-sitter-html"]
lang-css = ["dep:tree-sitter-css"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-bash = ["dep:tree-sitter-bash"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-xml = ["dep:tree-sitter-xml"]

[dependencies]
# Windowing
winit = "0.30"

# Text shaping & layout
glyphon = "0.7"

# Text buffer
ropey = "1.6"

# Async runtime (for wgpu)
pollster = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Regex search (minimal — no Unicode tables or DFA)
regex = { version = "1", default-features = false, features = ["std"] }

# Memory-mapped I/O for large-file search
memmap2 = "0.9"

# Clipboard (text only, no image support)
arboard = { version = "3", default-features = false }

# File dialog
rfd = "0.15"

# Encoding detection
encoding_rs = "0.8"

# Serialization (for config files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PNG decoding for app icon
png = "0.17"

# Vertex data
bytemuck = { version = "1.19", features = ["derive"] }

# Native menus (macOS menu bar support)
muda = "0.15"

# Syntax highlighting (tree-sitter)
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.23", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }

# GPU rendering (platform-specific backends)
[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "23", default-features = false, features = ["metal", "wgsl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "23", default-features = false, features = ["dx12", "wgsl"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "23", default-features = false, features = ["wgc", "wgsl"] }

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "NotepadX"
identifier = "com.notepadx.app"
icon = ["assets/logo.icns"]
category = "public.app-category.developer-tools"
short_description = "A fast, beautiful, cross-platform text editor"
copyright = "2025 NotepadX"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
